integrated components upgrade and ssl cert fix - upgrades to current versions of selenium and php web driver and updates README accordingly; - adds default behavior to bypass by default certification warning pages in the goto url action; - fixes access to firefox profile;

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "require": {
         "phpunit/phpunit": "^9.5",
-        "php-webdriver/webdriver": "^1.12",
-        "se/selenium-server-standalone": "^3.141"
+        "php-webdriver/webdriver": "^1.12"
     },
     "autoload": {
         "psr-4": {
