--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     },
   "require-dev": {
     "ext-pdo": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-dom": "*",
+    "ext-xsl": "*",
+    "ext-libxml",
   }
 }
