fix several DocumentProcessor bugs and adds xsl logging test/demo - fixes some DocumentProcessor test/demo files commit, - fixes misc logging.xsl bugs and adds xsl logging test/demo code, - upgrade to phpunit 10.5 and fix a composer.json require error, - fixes phpunit display of xsl log messages in console.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": " ^10.5",
         "php-webdriver/webdriver": "^1.12"
     },
     "autoload": {
@@ -14,6 +14,6 @@
     "ext-json": "*",
     "ext-dom": "*",
     "ext-xsl": "*",
-    "ext-libxml",
+    "ext-libxml": "*"
   }
 }
